docs/couchbase.css
/* Asciidoctor default stylesheet | MIT License | http://asciidoctor.org */
@import "https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700";
#logo-container img {
   height: 35px;
   margin-top: 15px;
   padding-left: 2.7em;
 }
nav {
   background-color: #fff;
   box-shadow: none;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   position: fixed;
   z-index: 999;
}
nav ul a {
   color: #039be5;
   font-weight: bold;
}
article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{
   display:block
}
audio,canvas,video{
   display:inline-block
}
audio:not([controls]){
   display:none;
   height:0
}
script{
   display:none!important
}
html{
   font-family:sans-serif;
   -ms-text-size-adjust:100%;
   -webkit-text-size-adjust:100%
}
a{
   background:transparent
}
a:focus{
   outline:thin dotted
}
a:active,a:hover{
   outline:0
}
h1{
   font-size:2em;
   margin:.67em 0
}
abbr[title]{
   border-bottom:1px dotted
}
b,strong{
   font-weight:bold
}
dfn{
   font-style:italic
}
hr{
   -moz-box-sizing:content-box;
   box-sizing:content-box;
   height:0
}
mark{
   background:#ff0;
   color:#000
}
code,kbd,pre,samp{
   font-family:monospace;
   font-size:1em
}
pre{
   white-space:pre-wrap
}
q{
   quotes:"\201C" "\201D" "\2018" "\2019"
}
small{
   font-size:80%
}
sub,sup{
   font-size:75%;
   line-height:0;
   position:relative;
   vertical-align:baseline
}
sup{
   top:-.5em
}
sub{
   bottom:-.25em
}
img{
   border:0
}
svg:not(:root){
   overflow:hidden
}
figure{
   margin:0
}
fieldset{
   border:1px solid silver;
   margin:0 2px;
   padding:.35em .625em .75em
}
legend{
   border:0;
   padding:0
}
button,input,select,textarea{
   font-family:inherit;
   font-size:100%;
   margin:0
}
button,input{
   line-height:normal
}
button,select{
   text-transform:none
}
button,html input[type="button"],input[type="reset"],input[type="submit"]{
   -webkit-appearance:button;
   cursor:pointer
}
button[disabled],html input[disabled]{
   cursor:default
}
input[type="checkbox"],input[type="radio"]{
   box-sizing:border-box;
   padding:0
}
button::-moz-focus-inner,input::-moz-focus-inner{
   border:0;
   padding:0
}
textarea{
   overflow:auto;
   vertical-align:top
}
table{
   border-collapse:collapse;
   border-spacing:0
}
*,*::before,*::after{
   -moz-box-sizing:border-box;
   -webkit-box-sizing:border-box;
   box-sizing:border-box
}
html,body{
   font-size:100%
}
body{
   background:#fff;
   color:rgba(0,0,0,.8);
   padding:0;
   margin:0;
   font-weight:400;
   font-style:normal;
   line-height:1;
   position:relative;
   cursor:auto;
   tab-size:4;
   -moz-osx-font-smoothing:grayscale;
   -webkit-font-smoothing:antialiased
}
a:hover{
   cursor:pointer
}
img,object,embed{
   max-width:100%;
   height:auto
}
object,embed{
   height:100%
}
img{
   -ms-interpolation-mode:bicubic
}
.left{
   float:left!important
}
.right{
   float:right!important
}
.text-left{
   text-align:left!important
}
.text-right{
   text-align:right!important
}
.text-center{
   text-align:center!important
}
.text-justify{
   text-align:justify!important
}
.hide{
   display:none
}
img,object,svg{
   display:inline-block;
   vertical-align:middle
}
textarea{
   height:auto;
   min-height:50px
}
select{
   width:100%
}
.center{
   margin-left:auto;
   margin-right:auto
}
.stretch{
   width:100%
}
.subheader,.admonitionblock td.content>.title,.audioblock>.title,.exampleblock>.title,.imageblock>.title,.listingblock>.title,.literalblock>.title,.stemblock>.title,.openblock>.title,.paragraph>.title,.quoteblock>.title,table.tableblock>.title,.verseblock>.title,.videoblock>.title,.dlist>.title,.olist>.title,.ulist>.title,.qlist>.title,.hdlist>.title{
   line-height:1.45;
   color:#7a2518;
   font-weight:400;
   margin-top:0;
   margin-bottom:.25em
}
div,dl,dt,dd,ul,ol,li,h1,h2,h3,#toctitle,.sidebarblock>.content>.title,h4,h5,h6,pre,form,p,blockquote,th,td{
   margin:0;
   padding:0;
   direction:ltr
}
a{
   color:#2196F3;
   line-height:inherit
}
a:hover,a:focus{
   color:#1d4b8f
}
a img{
   border:none
}
p{
   font-family:inherit;
   font-weight:400;
   font-size:1em;
   line-height:1.6;
   margin-bottom:1.25em;
   text-rendering:optimizeLegibility
}
p aside{
   font-size:.875em;
   line-height:1.35;
   font-style:italic
}
h1,h2,h3,#toctitle,.sidebarblock>.content>.title,h4,h5,h6{
   font-family:'Inconsolata', Monaco, Consolas, 'Andale Mono', monospace;
   font-weight:300;
   font-style:normal;
   color:#2196F3;
   text-rendering:optimizeLegibility;
   margin-top:1em;
   margin-bottom:.5em;
   line-height:1.0125em
}
h1 small,h2 small,h3 small,#toctitle small,.sidebarblock>.content>.title small,h4 small,h5 small,h6 small{
   font-size:60%;
   color:#e99b8f;
   line-height:0
}
h1{
   font-size:2.125em
}
h2{
   font-size:1.6875em
}
h3,#toctitle,.sidebarblock>.content>.title{
   font-size:1.375em
}
h4,h5{
   font-size:1.125em
}
h6{
   font-size:1em
}
hr{
   border:solid #ddddd8;
   border-width:1px 0 0;
   clear:both;
   margin:1.25em 0 1.1875em;
   height:0
}
em,i{
   font-style:italic;
   line-height:inherit
}
strong,b{
   font-weight:bold;
   line-height:inherit
}
small{
   font-size:60%;
   line-height:inherit
}
code{
   font-family:"Droid Sans Mono","DejaVu Sans Mono",monospace;
   font-weight:400;
   color:rgba(0,0,0,.9)
}
ul,ol,dl{
   font-size:1em;
   margin-bottom:1.25em;
   list-style-position:outside;
   font-family:inherit
}
ul,ol{
   margin-left:1.5em
}
ul li ul,ul li ol{
   margin-left:1.25em;
   margin-bottom:0;
   font-size:1em
}
ul.square li ul,ul.circle li ul,ul.disc li ul{
   list-style:inherit
}
ul.square{
   list-style-type:square
}
ul.circle{
   list-style-type:circle
}
ul.disc{
   list-style-type:disc
}
ol li ul,ol li ol{
   margin-left:1.25em;
   margin-bottom:0
}
dl dt{
   margin-bottom:.3125em;
   font-weight:bold
}
dl dd{
   margin-bottom:1.25em
}
/* ... */

